# django-shop

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  entrypoint.sh  manage.py  pyproject.toml
cart/: cart.py  forms.py  views.py
django_shop/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
docker-compose/: app.yaml
docker_compose/: app.yaml  celery.yaml  flower.yaml  rabbitmq.yaml  storages.yaml
orders/: admin.py  forms.py  models.py  tasks.py  urls.py  views.py
orders/migrations/: 0001_initial.py  0002_order_stripe_id.py
payment/: tasks.py  urls.py  views.py  webhooks.py
shop/: admin.py  models.py  urls.py  views.py
shop/migrations/: 0001_initial.py
